--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
   },
   "homepage": "https://github.com/ultraluminar/Fullstack-2024w#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.5"
   }
 }
